fix: apply hidden scrollbar only to elements which have `.hide-scrollbar` class on chrome

--- a/src/global.css
+++ b/src/global.css
@@ -19,14 +19,14 @@
   --background: 240 13.64% 8.63%;
 }
 
-/* hide the scrollbar on Chrome */
-::-webkit-scrollbar {
-  display: none;
-}
-
 .hide-scrollbar {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
+}
+
+/* Chrome */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
 }
 
 body {
